# fiap-machine-learning-tech-challenge-4

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docker/: .dockerignore  Dockerfile  docker-compose.yml  prometheus.yml
docs/: API.md  ARCHITECTURE.md  MLFLOW.md
models/: PETR4.SA_20260222_162116.pt  PETR4.SA_20260222_162652.pt  PETR4.SA_20260222_162652_scaler.joblib  PETR4.SA_20260222_163125.pt  PETR4.SA_20260222_163559.pt
scripts/: evaluate.py  train.py
src/api/: dependencies.py  main.py
src/api/middleware/: metrics.py
src/api/routes/: __init__.py  health.py  inference.py  prediction.py  prediction_routes.py  training.py
src/api/schemas/: __init__.py  error_response.py  health_response.py  historical_data_response.py  (+12 more)
src/data/: collector.py  preprocessor.py
src/database/: connection.py  models.py  repository.py
src/models/: lstm_model.py  predictor.py  trainer.py
src/monitoring/: metrics.py  mlflow_tracker.py
src/utils/: __init__.py  config.py  logger.py  mlflow_setup.py  mlflow_tracing.py
tests/: conftest.py
tests/test_api/: test_health_routes.py  test_inference_routes.py  test_prediction_routes.py  test_training_mlflow.py  test_training_routes.py
tests/test_data/: conftest.py  test_collector.py  test_preprocessor.py
tests/test_database/: test_repository.py
tests/test_integration/: conftest.py  test_mlflow_e2e.py
tests/test_models/: conftest.py  test_lstm_model.py  test_predictor.py  test_trainer.py  test_trainer_mlflow.py
tests/test_monitoring/: test_mlflow_tracker.py
tests/test_utils/: test_mlflow_setup.py
